--- a/input/readme
+++ b/input/readme
@@ -1,6 +1,6 @@
 The input dataset is about 3GB and would be avaiable soon !
 
 If any reader is eager to run the DCM,
-please directly contact fangxh@fudan.edu.cn or chennan@math.wisc.edu to obtain the full input dataset.
+please directly contact fangxh@fudan.edu.cn to obtain the full input dataset and technical assistance.
 
 
