--- a/input/readme
+++ b/input/readme
@@ -1,3 +1,4 @@
-please directly contact fangxh@fudan.edu.cn to obtain the full input dataset and technical assistance.
+input dir
+please directly contact fangxh@fudan.edu.cn for technical assistance.
 
 
